# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  my_data.txt  pyproject.toml  setup.cfg
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
locale/ru/LC_MESSAGES/: django.po
task_manager/: __init__.py  forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  create_update_form.html  delete_form.html  home.html  index.html  login.html  login_form.html
task_manager/templates/auth/: user_delete_form.html  user_update_form.html
task_manager/templates/labels/: create.html  index.html  label_delete_form.html  label_update_form.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  index.html  status_delete_form.html
task_manager/templates/tasks/: context.html  create.html  index.html  status_update_form.html  task_delete_form.html  (+2 more)
task_manager/tests/: parse_data.py  pytest.ini  rest_lables.py  rest_tasks.py  test_statuses.py  test_users.py  tests_users.py
task_manager/user/: admin.py  create_example.py  forms.py  models.py  urls.py  views.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
(+15 files in other folders)
